tests/data/placebo/test_network_acl_s3_present/ec2.DeleteVpc_1.json
{
    "status_code": 200, 
    "data": {
        "ResponseMetadata": {
            "RetryAttempts": 0, 
            "HTTPStatusCode": 200, 
            "RequestId": "6fd97879-2dd6-41e7-98f9-5ab460061ce2", 
            "HTTPHeaders": {
                "transfer-encoding": "chunked", 
                "vary": "Accept-Encoding", 
                "server": "AmazonEC2", 
                "content-type": "text/xml;charset=UTF-8", 
                "date": "Mon, 26 Jun 2017 18:48:40 GMT"
            }
        }
    }
}
