tests/data/placebo/test_network_acl_s3_present/ec2.DescribeNetworkAcls_1.json
{
  "status_code": 200,
  "data": {
    "NetworkAcls": [
      {
        "Associations": [],
        "NetworkAclId": "acl-2495b15d",
        "VpcId": "vpc-ba64dac3",
        "Tags": [],
        "Entries": [
          {
            "RuleNumber": 100,
            "Protocol": "-1",
            "Egress": true,
            "CidrBlock": "0.0.0.0/0",
            "RuleAction": "allow"
          },
          {
            "RuleNumber": 32767,
            "Protocol": "-1",
            "Egress": true,
            "CidrBlock": "0.0.0.0/0",
            "RuleAction": "deny"
          },
          {
            "RuleNumber": 100,
            "Protocol": "-1",
            "Egress": false,
            "CidrBlock": "0.0.0.0/0",
            "RuleAction": "allow"
          },
          {
            "RuleNumber": 32767,
            "Protocol": "-1",
            "Egress": false,
            "CidrBlock": "0.0.0.0/0",
            "RuleAction": "deny"
          }
        ],
        "IsDefault": true
      }
    ],
    "ResponseMetadata": {}
  }
}
