tests/data/placebo/test_network_acl_s3_present/ec2.DescribePrefixLists_1.json
{
  "status_code": 200,
  "data": {
    "PrefixLists": [
      {
        "PrefixListName": "com.amazonaws.us-east-1.s3",
        "Cidrs": [
          "54.231.0.0/17",
          "52.216.0.0/15"
        ],
        "PrefixListId": "pl-63a5400a"
      }
    ],
    "ResponseMetadata": {}
  }
}
