tests/data/placebo/test_network_acl_s3_present/tagging.GetResources_1.json
{
    "status_code": 200, 
    "data": {
        "PaginationToken": "", 
        "ResourceTagMappingList": [], 
        "ResponseMetadata": {
            "RetryAttempts": 0, 
            "HTTPStatusCode": 200, 
            "RequestId": "12670cfc-5aa0-11e7-8799-1d5d7ab42bf5", 
            "HTTPHeaders": {
                "x-amzn-requestid": "12670cfc-5aa0-11e7-8799-1d5d7ab42bf5", 
                "date": "Mon, 26 Jun 2017 18:48:40 GMT", 
                "content-length": "50", 
                "content-type": "application/x-amz-json-1.1"
            }
        }
    }
}
